fix: dark mode

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -3,7 +3,13 @@
   --bg-color:#ffffff;
   --link-color:#275a90;
   --color-button-hover: #36373a;
-  
+}
+
+[data-theme="light"] {
+  --font-color: #24292f;
+  --bg-color:#ffffff;
+  --link-color:#275a90;
+  --color-button-hover: #36373a;
 }
 
 [data-theme="dark"] {
